log
Thu 28 Mar 2024 07:15:56 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |    List * lista = (List *)malloc(sizeof(List));
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
d0cb38c
Thu 28 Mar 2024 07:16:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e2a94a6
Thu 28 Mar 2024 07:18:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
61a3346
Thu 28 Mar 2024 07:19:33 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
cb5b0a5
Thu 28 Mar 2024 07:20:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2530c53
Thu 28 Mar 2024 07:21:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
43125a6
Thu 28 Mar 2024 07:22:50 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
dd34d60
Thu 28 Mar 2024 07:23:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:10: error: dereferencing ‘void *’ pointer [-Werror]
   39 |   return *dato;
      |          ^~~~~
list.c:39:10: error: void value not ignored as it ought to be
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e0d5300
Thu 28 Mar 2024 07:24:41 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:8: error: ‘lista’ is a pointer; did you mean to use ‘->’?
   33 |   lista.head = NULL;
      |        ^
      |        ->
list.c: In function ‘firstList’:
list.c:41:10: error: dereferencing ‘void *’ pointer [-Werror]
   41 |   return *dato;
      |          ^~~~~
list.c:41:10: error: void value not ignored as it ought to be
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
23f381c
